syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "Backend/pb";

message ChatRecordNoID{
    string RoleType = 1;
    string MediaType = 2;
    string Media = 3;
    bool IsRead = 4;
    google.protobuf.Timestamp CreatedAt = 5;
}